--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -116,6 +116,18 @@
       </div>
     </div>
 
+    <!-- Footer -->
+      <footer class="footer">
+        <div class="container text-center">
+          <a href="testPage" class="footer-link">
+            <p>&copy; 2024 Pamantasan ng Lungsod ng Pasig. All Rights Reserved.</p>
+          </a>
+            <p>Predicting Timely Program Completion of BSIT Students Using Logistic Regression Analysis.</p>
+            <p>Delnard Cantor, Kylle Jasper Lavilla, John Paul Martinez</p>
+        </div>
+      </footer>
+    
+
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         // Function to handle closing error messages
