--- a/website/templates/testPage.html
+++ b/website/templates/testPage.html
@@ -22,7 +22,7 @@
     </div>
     <div class="aboutUsTitle">
       <h2>THE DEVELOPERS</h2>
-      <p>NAME, IMAGE, ROLE</p>
+      <p>NAME, IMAGE, ROLE, SOCIALS</p>
     </div>
     <div class="aboutUsTitle">
       <h2>THE ABSTRACT</h2>
