--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -314,45 +314,51 @@
     }
 
     let tableContent = `
-        <div class="classifiers">
-            <div class="tbl-content">
-                <table>
-                    <thead>
-                        <tr class="bgTr">
-                            <th class="centerUpdateDashboard">STUDID</th>
-                            <th class="centerUpdateDashboard">STUDENT NAME</th>
-                            ${isGraduatingOnTimeSlide || isWithoutPredictionSlide ? "" : `
-                                <th class="centerUpdateDashboard">PERCENTAGE</th>
-                                <th class="centerUpdateDashboard">FACTORS</th>
-                                <th class="centerUpdateDashboard">INTERVENTION</th>
-                            `}
-                        </tr>
-                    </thead>
-                    <tbody>
-    `;
+    <div class="classifiers">
+        <div class="tbl-content">
+            <table>
+                <thead>
+                    <tr class="bgTr">
+                        <th class="centerUpdateDashboard">STUDID</th>
+                        <th class="centerUpdateDashboard">STUDENT NAME</th>
+                        ${isGraduatingOnTimeSlide ? `
+                            <th class="centerUpdateDashboard">PERCENTAGE</th>
+                        ` : ""}
+                        ${isGraduatingOnTimeSlide || isWithoutPredictionSlide ? "" : `
+                            <th class="centerUpdateDashboard">FACTORS</th>
+                            <th class="centerUpdateDashboard">INTERVENTION</th>
+                        `}
+                    </tr>
+                </thead>
+                <tbody>
+`;
 
     paginatedData.forEach(item => {
       tableContent += `
-            <tr class="highlight-row">
-            <td class="centerUpdateDashboard" data-label="STUDID">${item.id}</td>
-            <td class="centerUpdateDashboard" data-label="STUDENT NAME">${item.name}</td>
-            ${isGraduatingOnTimeSlide || isWithoutPredictionSlide ? "" : `
-                <td class="centerUpdateDashboard" data-label="PERCENTAGE">${item.percentage}</td>
-                <td class="centerUpdateDashboard" data-label="FACTOR">${item.factor || ""}</td>
-                <td class="centerUpdateDashboard" data-label="INTERVENTION">${item.intervention || ""}</td>
-            `}
-          </tr>
-        `;
+        <tr class="highlight-row">
+        <td class="centerUpdateDashboard" data-label="STUDID">${item.id}</td>
+        <td class="centerUpdateDashboard" data-label="STUDENT NAME">${item.name}</td>
+        ${isGraduatingOnTimeSlide ? `
+            <td class="centerUpdateDashboard" data-label="PERCENTAGE">${item.percentage || ""}</td>
+        ` : ""}
+        ${isGraduatingOnTimeSlide || isWithoutPredictionSlide ? "" : `
+            <td class="centerUpdateDashboard" data-label="FACTOR">${item.factor || ""}</td>
+            <td class="centerUpdateDashboard" data-label="INTERVENTION">${item.intervention || ""}</td>
+        `}
+      </tr>
+    `;
     });
 
     tableContent += `
-            </tbody>
-        </table>
-        </div>
+        </tbody>
+    </table>
     </div>
-    `;
+</div>
+`;
 
     return tableContent;
+
+
   }
 
   function changePage(direction) {
@@ -514,6 +520,5 @@
       });
     });
 </script>
-
 
 {% endblock %}
